update release workflow

--- a/.github/workflows/release-deploy.yml
+++ b/.github/workflows/release-deploy.yml
@@ -26,8 +26,8 @@ jobs:
           SSH_HOST: ${{ secrets.PG_HOST }}
       - name: Export Environment Variables
         run: |
-          ssh playground export TERM=$TERM
-          ssh playground export SERVERNAME=$SERVERNAME
+          ssh playground 'export TERM=$TERM'
+          ssh playground 'export SERVERNAME=$SERVERNAME'
         env:
           TERM: xterm
           SERVERNAME: playground
