--- a/.github/workflows/release-deploy.yml
+++ b/.github/workflows/release-deploy.yml
@@ -26,7 +26,7 @@ jobs:
           SSH_HOST: ${{ secrets.PG_HOST }}
       - name: Export Environment Variables and Execute Install Script
         run: |
-          ssh playground 'export TERM=xterm; curl -L https://siglens.com/install.sh | sh'
+          ssh playground 'export TERM=xterm; export SERVERNAME=playground; curl -L https://siglens.com/install.sh | sh > /dev/null 2>&1'
         env:
           TERM: xterm
           SERVERNAME: playground
