--- a/.github/workflows/release-deploy.yml
+++ b/.github/workflows/release-deploy.yml
@@ -26,10 +26,10 @@ jobs:
           SSH_HOST: ${{ secrets.PG_HOST }}
       - name: Export Environment Variables and Execute Install Script
         run: |
-          ssh playground 'export TERM=xterm; export SERVERNAME=playground; curl -L https://siglens.com/install.sh | sh > /dev/null 2>&1'
+          ssh playground 'export TERM=$TERM; export SERVERNAME=$SERVERNAME; curl -L https://siglens.com/install.sh | sh > /dev/null 2>&1'
         env:
           TERM: xterm
-          SERVERNAME: playground
+          SERVERNAME: ${{ secrets.PG_SERVERNAME }}
       - name: Verify Server Start
         run: |
           sleep 5
