using playground.yaml

--- a/.github/workflows/release-deploy.yml
+++ b/.github/workflows/release-deploy.yml
@@ -26,7 +26,7 @@ jobs:
           SSH_HOST: ${{ secrets.PG_HOST }}
       - name: Export Environment Variables and Execute Install Script
         run: |
-          ssh playground 'export TERM=xterm; export SERVERNAME=PG_SERVERNAME; curl -L https://siglens.com/install.sh | sh > /dev/null 2>&1'
+          ssh playground 'export TERM=xterm; export SERVERNAME=${{ secrets.PG_SERVERNAME }}; curl -L https://siglens.com/install.sh | sh > /dev/null 2>&1'
       - name: Verify Server Start
         run: |
           sleep 5
