--- a/playground.yaml
+++ b/playground.yaml
@@ -25,7 +25,7 @@ retentionHours: 48
 # memoryThresholdPercent: 80
 
 ## For ephemeral servers (docker, k8s) set this variable to unique container name to persist data across restarts:
-ssInstanceName: "04c18529eb27"
+ssInstanceName: "sigsingle"
 
 log:
   logPrefix : ./logs/
