--- a/.github/workflows/publish-prod-images.yml
+++ b/.github/workflows/publish-prod-images.yml
@@ -54,7 +54,7 @@ jobs:
             platforms: linux/amd64,linux/arm64
             tags: ${{ steps.meta.outputs.tags }}
 
-  sigscalr-binaries:
+  sigscalr-release-assets:
       runs-on: ubuntu-latest
       environment: build-environment
       permissions:
@@ -69,28 +69,6 @@ jobs:
           uses: actions/setup-go@v3
           with:
             go-version: '>=1.18.0'
-        -
-          name: Setup zig
-          uses: goto-bus-stop/setup-zig@v2
-        - 
-          name: install cross compiler for linux/amd64
-          run: sudo apt-get -y install build-essential
-      
-        # Setup Rust, use the x86_64-apple-darwin target but the rest can be customized.
-        - 
-          name: Setup Rust
-          uses: ATiltedTree/setup-rust@v1
-          with:
-            rust-version: stable
-
-        # Use the v1 of this action
-        - 
-          name: Setup osxcross
-          uses: mbround18/setup-osxcross@v1
-        # This builds executables & sets env variables for rust to consume.
-          with:
-            osx-version: "12.3"
-
         - 
           name: version
           run: |
