--- a/.github/workflows/test-deploy.yml
+++ b/.github/workflows/test-deploy.yml
@@ -43,12 +43,12 @@ jobs:
 
             -   name: Start tunnel
                 env:
-                    COMMIT_SHA: pr-${{ steps.short-sha.outputs.sha }}
+                    COMMIT_SHA: latest
                 run: |
                     npm install -g localtunnel
-                    host=$(kubectl get svc -n platform | grep siglens-query-svc | tr -s ' ' | cut -d" " -f4)
+                    host=$(kubectl get svc -n platform | grep siglens1-query-svc | tr -s ' ' | cut -d" " -f4)
                     port=$(kubectl get svc -n platform | grep siglens-query-svc | tr -s ' ' | cut -d" " -f5 | cut -d":" -f1)
-                    lt -p $port -l $host -s $COMMIT_SHA
+                    lt -p 5122 -l localhost -s $COMMIT_SHA
                             
             
             
