--- a/.github/workflows/test-deploy.yml
+++ b/.github/workflows/test-deploy.yml
@@ -37,7 +37,7 @@ jobs:
                     helm install siglens siglens/siglens -n platform \
                     --wait \
                     --timeout 10m0s \
-                    --set query.service.type=LoadBalancer 
+                    --set siglens-query-svc.service.type=LoadBalancer 
                     # get pods, services and the container images
                     kubectl get pods -n platform
                     kubectl get svc -n platform
