--- a/.github/workflows/release-deploy.yml
+++ b/.github/workflows/release-deploy.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Verify Server Start
         run: |
           sleep 5
-          if ! curl --silent http://localhost:5122 | head -n 30; then
-            echo "Server did not start within 5 seconds"
-            exit 1
-          fi
+          ssh playground 'export TERM=xterm; if ! curl --silent http://localhost:5122 | head -n 30; then echo "Server did not start within 5 seconds"; exit 1; fi'
+      - name: Start Sigclient
+        run: |
+          ssh playground 'export TERM=xterm; sudo nohup ${{ secrets.PG_LOAD_TEST_PATH }} ingest esbulk -b 1 -d http://localhost:8081/elastic -g dynamic-user -n 1 -c > /dev/null 2>${{ secrets.PG_INGEST_LOG_FILE }} &'
