--- a/server.yaml
+++ b/server.yaml
@@ -36,3 +36,12 @@ log:
 
   ## Compress log file
   # compressLogFile: false
+
+# TLS configuration
+tls:
+  enabled: false   # Set to true to enable TLS
+  certificatePath: ""  # Path to the certificate file
+  privateKeyPath: ""   # Path to the private key file
+
+# SigLens server hostname
+queryHostname: ""
