--- a/.github/workflows/release-deploy.yml
+++ b/.github/workflows/release-deploy.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   deploy:
     name: "Deploy Siglens"
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
       - name: Setup SSH Configuration
         run: |
