--- a/.github/workflows/release-deploy.yml
+++ b/.github/workflows/release-deploy.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   deploy:
     name: "Deploy Siglens"
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Setup SSH Configuration
         run: |
@@ -26,6 +26,9 @@ jobs:
           SSH_USER: ${{ secrets.PG_SSH_USER }}
           SSH_KEY: ${{ secrets.PG_SSH_PRIVATE_KEY }}
           SSH_HOST: ${{ secrets.PG_HOST }}
+      - name: Debug tput
+          run: |
+            ssh playground 'which tput; tput --version'
       - name: Export Environment Variables and Execute Install Script
         run: |
           ssh playground 'export TERM=xterm; export SERVERNAME=${{ secrets.PG_SERVERNAME }}; cd ${{ secrets.PG_DOCKER_INSTALL_PATH }}; curl -L https://siglens.com/install.sh | sh'
