--- a/.github/workflows/release-deploy.yml
+++ b/.github/workflows/release-deploy.yml
@@ -1,11 +1,14 @@
 name: release-deploy.yml
 
 on:
-  release:
-    types: [created]
+  workflow_run:
+    workflows: ["siglens-docker-release"]
+    types:
+      - completed
 
 jobs:
   deploy:
+    if: ${{ github.event.workflow_run.conclusion == 'success' && github.event.workflow_run.head_branch == 'main' }}
     name: "Deploy Siglens"
     runs-on: ubuntu-latest
     steps:
