feat: Disable Tracing if the tracing error repeats >= 3 times

--- a/server.yaml
+++ b/server.yaml
@@ -50,4 +50,4 @@ queryHostname: ""
 tracing:
   enabled: true   # Set to true to enable tracing
   serviceName: "siglens"   # Service name for tracing
-  endpoint: "http://localhost:8081/otlp/v1/traces"  # Endpoint URL for tracing
+  endpoint: "http://localhost:8081/otlp/v1/traces/ascascas"  # Endpoint URL for tracing
