--- a/playground.yaml
+++ b/playground.yaml
@@ -35,3 +35,9 @@ log:
 
   ## Compress log file
   # compressLogFile: false
+
+
+tracing:
+  enabled: true   # Set to true to enable tracing
+  serviceName: "siglens"   # Service name for tracing
+  endpoint: "http://pgdebug.siglens.com:4318/v1/traces"  # Endpoint URL for tracing
