Enable tracing in SigLens (#700)
* feat: otel instrumentation and tracing enabled

* feat: Disable Tracing if the tracing error repeats >= 3 times

* refac: Set TraceProvider to NoopTraceProvider

* chore: default tracing enabled and tracing endpoint to set to localhost

* test: updated config_test with tracing config

* refac: better error msgs & take tracing config through env vars

* feeat: Attempt to re-enable tracing 1 hour after disabling it.

* feat: updates playground,otel config, and docker-compose for tracing config

* refac: moved enable tracing out of the yaml config

* chore: comment updated

* refac: moved the tracing enable flag var outseide of the tracing config

* chore: remove new empty lines

* chore: removed tracing.enabled in tests

* feat: Added Trace Sampling Perentage in the tracing config

* chore: add trace smapling percentage env var in docker-compose

* refac: set to zero when trace sampling < 0

* bump: go version to 1.19

* chore: removed ioutil deprecated pkg

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,9 @@ services:
       - WORK_DIR=${WORK_DIR}
       - IMAGE_NAME=${IMAGE_NAME}
       - CSI=${CSI}
+      - TRACESTORE_ENDPOINT=${TRACESTORE_ENDPOINT}
+      - SIGLENS_TRACING_SERVICE_NAME=${SIGLENS_TRACING_SERVICE_NAME}
+      - TRACE_SAMPLING_PRECENTAGE=${TRACE_SAMPLING_PRECENTAGE}
   hotrod:
     image: jaegertracing/example-hotrod:1.53
     ports:
