--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,11 +32,11 @@ jobs:
       - run:
           name: Run E2E Test test
           command: |
-            cd sigscalr-client
+            cd tools/sigclient
             go run main.go ingest esbulk -n 10 -g benchmark -d http://localhost:8081/elastic -t 100_000
             go run main.go ingest metrics -d http://localhost:8081/otsdb -t 1_000 -m 5 -p 10 -b 10_000
             sleep 40
-            go run main.go query esbulk -d http://localhost:5122 -f ../cicd/ingest.csv
+            go run main.go query esbulk -d http://localhost:5122 -f ../../cicd/ingest.csv
             go run main.go query otsdb -d http://localhost:5122/otsdb -n 5 -y
       - run:
           name: Kill Siglens
