--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,11 +30,11 @@ jobs:
             tail -f logs/siglens.log
           background: true
       - run:
-          name: Run E2E Test test
+          name: Run E2E Test
           command: |
             cd tools/sigclient
             go run main.go ingest esbulk -n 10 -g benchmark -d http://localhost:8081/elastic -t 100_000
-            go run main.go ingest metrics -d http://localhost:8081/otsdb -t 1_000 -m 5 -p 10 -b 10_000
+            go run main.go ingest metrics -d http://localhost:8081 -t 1_000 -m 5 -p 10 -b 10_000
             sleep 40
             go run main.go query esbulk -d http://localhost:5122 -f ../../cicd/ingest.csv
             go run main.go query otsdb -d http://localhost:5122/otsdb -n 5 -y
