--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,9 +23,6 @@ jobs:
           command: ./siglens --config server.yaml
           background: true
       - run:
-          name: Clone sigscalr-client repo
-          command: git clone git@github.com:sigscalr/sigscalr-client.git
-      - run:
           name: Tail logs file
           command: |
             sleep 10
@@ -33,13 +30,13 @@ jobs:
             tail -f logs/siglens.log
           background: true
       - run:
-          name: Run E2E Test test
+          name: Run E2E Test
           command: |
-            cd sigscalr-client
+            cd tools/sigclient
             go run main.go ingest esbulk -n 10 -g benchmark -d http://localhost:8081/elastic -t 100_000
-            go run main.go ingest metrics -d http://localhost:8081/otsdb -t 1_000 -m 5 -p 10 -b 10_000
+            go run main.go ingest metrics -d http://localhost:8081 -t 1_000 -m 5 -p 10 -b 10_000
             sleep 40
-            go run main.go query esbulk -d http://localhost:5122 -f ../cicd/ingest.csv
+            go run main.go query esbulk -d http://localhost:5122 -f ../../cicd/ingest.csv
             go run main.go query otsdb -d http://localhost:5122/otsdb -n 5 -y
       - run:
           name: Kill Siglens
@@ -54,9 +51,9 @@ jobs:
       - run:
           name: Run Restart CI/CD tests
           command: |
-            cd sigscalr-client
+            cd tools/sigclient
             sleep 5
-            go run main.go query esbulk -d http://localhost:5122 -f ../cicd/restart.csv
+            go run main.go query esbulk -d http://localhost:5122 -f ../../cicd/restart.csv
             go run main.go query otsdb -d http://localhost:5122/otsdb -n 5 -y
 
 # Invoke jobs via workflows
