--- a/.github/workflows/publish-prod-images.yml
+++ b/.github/workflows/publish-prod-images.yml
@@ -53,7 +53,29 @@ jobs:
             push: true
             platforms: linux/amd64,linux/arm64
             tags: ${{ steps.meta.outputs.tags }}
-
+  sigclient-docker:
+      runs-on: ubuntu-latest
+      steps:
+        -
+          name: Checkout
+          uses: actions/checkout@v3
+          continue-on-error: true
+        - 
+          name: Login to Docker Hub
+          uses: docker/login-action@v1
+          continue-on-error: true
+          with:
+              username: ${{ secrets.DOCKERHUB_USERNAME }}
+              password: ${{ secrets.DOCKERHUB_TOKEN }}
+        -
+          name: Build and push
+          uses: docker/build-push-action@v3
+          continue-on-error: true
+          with:
+              context: .
+              file: tools/sigclient/Dockerfile
+              push: true
+              tags: siglens/sigclient:latest
   sigscalr-release-assets:
       runs-on: ubuntu-latest
       environment: build-environment
