--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,19 +1,19 @@
 # Default owners for everything, unless a later match takes precedence.
-* @nkunal @sunitakawane @sonamgupta21 @AndrewHess @nbhavana
+* @nkunal @sunitakawane @sonamgupta21 @AndrewHess
 
 # Backend
-pkg/* @sunitakawane @AndrewHess @nbhavana
-cicd/* @sunitakawane @AndrewHess @nbhavana
-*.go @sunitakawane @AndrewHess @nbhavana
-*.mod @sunitakawane @AndrewHess @nbhavana
-*.sum @sunitakawane @AndrewHess @nbhavana
-*.proto @sunitakawane @AndrewHess @nbhavana
-*.peg @AndrewHess
+pkg/* @Macbeth98 @AndrewHess
+cicd/* @Macbeth98 @AndrewHess
+*.go @Macbeth98 @AndrewHess
+*.mod @Macbeth98 @AndrewHess
+*.sum @Macbeth98 @AndrewHess
+*.proto @Macbeth98 @AndrewHess
+*.peg @Macbeth98 @AndrewHess
 
 # Frontend
-static/* @sunitakawane @sonamgupta21 @nbhavana
-static/assets/* @sonamgupta21 @nbhavana
-*.js @sunitakawane @sonamgupta21 @nbhavana
-*.css @sonamgupta21 @nbhavana
-*.html @sonamgupta21 @nbhavana
+static/* @sunitakawane @sonamgupta21
+static/assets/* @sonamgupta21
+*.js @sunitakawane @sonamgupta21
+*.css @sonamgupta21
+*.html @sonamgupta21
 
